[package]
name = "pathbuf"
description = "A macro to conveniently build PathBufs"
repository = "https://github.com/alilleybrinker/pathbuf"
version = "0.3.1"
edition = "2021"
license = "Apache-2.0"

[features]
sanitise = ["sanitize-filename-reader-friendly"]

[dependencies]
sanitize-filename-reader-friendly = { version = "2.2.1", optional = true }
